# unsubscribe

./: .env.example  .gitignore  AGENTS.md  HOMEWORK.md  PLAN.md  README.md  environment.yml  opencode.json  pyproject.toml
.github/workflows/: test.yml
.opencode/agents/: email-digest.md
.opencode/commands/: email-candidates.md  email-send.md  email.md  unsubscribe.md
docs/: AGENT_PLAN_CONTRACT.md  IMPLEMENTATION_PLAN_EMAIL_SUMMARIES.md  INVENTORY.md  LESSONS_LEARNED.md  LM_STUDIO_DIGEST.md  PROJECT_BRIEF_EMAIL_SUMMARIES.md  SPARK_DEVICE_CHECK.md
scripts/: digest-cron.example.sh
src/email_digest/: __main__.py  cache.py  cli.py  cluster.py  config.py  digest_mail.py  embed.py  gmail_query.py  llm.py  paths.py  pipeline.py  render.py  spark_link.py  synthesis.py  walkthrough.py
src/unsubscribe/: __init__.py  browser_helpers.py  browser_unsubscribe.py  classifier.py  cli.py  execution.py  gmail_api_backend.py  gmail_facade.py  keep_list.py  live_brave_trace.py  page_confirmation_markers.py  timed_run.py  unsubscribe_link.py  unsubscribe_oneclick.py  unsubscribe_page_capture.py
templates/: digest.html.j2
tests/: conftest.py  test_browser_finalize_html.py  test_browser_unsubscribe.py  test_cache.py  test_classifier.py  test_cli_check.py  test_cluster.py  test_digest_classifier.py  test_digest_cli.py  test_digest_config.py  test_digest_gmail_query.py  test_digest_mail.py  test_digest_pipeline.py  test_digest_walkthrough.py  test_embed.py  test_execution.py  test_gmail_api_backend.py  test_gmail_facade.py  test_keep_list.py  test_live_brave_trace.py  test_llm_env.py  test_llm_resolve_alias.py  test_page_confirmation_html.py  test_render.py  test_smoke.py  test_spark_link.py  test_substantive_list_summary.py  test_synthesis.py  test_unsubscribe_link.py  test_unsubscribe_oneclick.py  test_unsubscribe_page_capture.py
topics/: ai.yaml  health.yaml  health_psy.yaml
(+19 files in other folders)
